[tool.poetry]
name = "dora"
version = "0.1.0"
description = ""
authors = ["Navneet Desai <navneetdesai44@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.3.2"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
psycopg2 = "2.9.6"
psycopg2-binary = "2.9.6"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.15"
email-validator = "^2.0.0.post2"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
cryptography = "^41.0.1"
alembic = "^1.11.1"
detect-secrets = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
